tabs overlap issue

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -10163,13 +10163,13 @@ span#HW_badge_cont:nth-child(3) {
     // .tabs-page .padding-top-fixed-mobile {
     //     padding-top: 126px;
     // }
-    .padding-top-fixed-mobile {
-        padding-top: 95px;
-    }
-    //.page-has-tabs .padding-top-fixed-mobile,
-    //.on-user-page .padding-top-fixed-mobile {
-    //    padding-top: 130px !important;
-   // }
+    //.padding-top-fixed-mobile {
+       // padding-top: 95px;
+    //}
+    .page-has-tabs .padding-top-fixed-mobile,
+    .on-user-page .padding-top-fixed-mobile {
+       padding-top: 130px !important;
+   }
     .page-has-tabs.setting-sidebar-open .padding-top-fixed-mobile {
         padding-top: 85px !important;
     }
